--- a/MakeFile
+++ b/MakeFile
@@ -3,12 +3,12 @@ CFLAGS = -c -g -Wall -std=gnu99 `pkg-config fuse --cflags --libs`
 LDFLAGS = `pkg-config fuse --cflags --libs`
 
 # Uncomment on of the following three lines to compile
-#SOURCES= disk_emu.c sfs_api.c sfs_test.c sfs_api.h
-#SOURCES= disk_emu.c sfs_api.c sfs_test2.c sfs_api.h
-SOURCES= disk_emu.c sfs_api.c fuse_wrappers.c sfs_api.h
+#SOURCES= disk_emu.c sfs_api.c bitmap.c sfs_test.c sfs_api.h bitmap.h
+SOURCES= disk_emu.c sfs_api.c bitmap.c sfs_test2.c sfs_api.h bitmap.h
+#SOURCES= disk_emu.c sfs_api.c bitmap.c fuse_wrappers.c sfs_api.h bitmap.h
 
 OBJECTS=$(SOURCES:.c=.o)
-EXECUTABLE=First_Lastname_sfs
+EXECUTABLE=Felix_Dube_sfs
 
 all: $(SOURCES) $(HEADERS) $(EXECUTABLE)
 
